--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <!-- Tailwind CSS via CDN for development -->
     <script src="https://cdn.tailwindcss.com"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+    <title>BuzzBoard</title>
   </head>
   <body>
     <div id="root"></div>
